--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@hookform/resolvers": "^2.9.8",
+    "axios": "^1.1.2",
+    "react-hook-form": "^7.36.1",
+    "react-icons": "^4.4.0",
+    "react-router-dom": "^6.4.1",
+    "react-toastify": "^9.0.8",
+    "styled-components": "^5.3.6",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
